# gpt-cli-rs

./: Cargo.toml
src/: main.rs  models.rs
